--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8">
-<title> WEBSITE</title>
+<title> DENCHI`s PAGE</title>
 </head>
 <body>
+  <h1>HELLOWORLD</h1>
+  <p>HELLOHELLO</p>
 </body>
 </html>
