--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
+
 <title> DENCHI`s PAGE</title>
 </head>
 <body>
-  <h1>HELLOWORLD</h1>
-  <p>HELLOHELLO</p>
-  <img src="Dummy.jpg" width = "676" height = "246">
+<font color="#ffffff">
+	<div style="background-color:#000000;">
+  	<h1>HELLOWORLD</h1>
+  	<p>HELLOHELLO</p>
+  	<img src="Dummy.png" width = "676" height = "246">
+	</div>
+</font>
 </body>
 </html>
