--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
 
 <title> DENCHI`s PAGE</title>
 </head>
-<body>
+<body bgcolor="#000000">
 <font color="#ffffff">
-	<div style="background-color:#000000;">
   	<h1>HELLOWORLD</h1>
   	<p>HELLOHELLO</p>
   	<img src="Dummy.png" width = "676" height = "246">
-	</div>
 </font>
 </body>
 </html>
