--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <font color="#ffffff">
   	<h1>HELLOWORLD</h1>
   	<p>HELLOHELLO</p>
-  	<img src="Dummy.png" width = "676" height = "246">
+  	<img src="Dummy.png">
 </font>
 </body>
 </html>
